# cartocrypt

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  setup_repo.sh
.github/workflows/: ci.yml
docs/: api.rst  cli.rst  conf.py  index.rst  threat_model.rst
examples/: aegina_demo.py
src/cartocrypt/: __init__.py  aegina.py  canon.py  cli.py  constants.py  export.py  faces.py  fake_layers.py  ingest.py  keygen.py  overlay.py  reembed.py  shapes.py  verify.py  viz.py  viz_aegina.py
tests/: aegina_fixture.py  test_aegina.py  test_core.py  test_overlay.py  test_reembed_area.py  test_sprint1.py
